--- a/api/package.json
+++ b/api/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "spacetalk-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/server.js",
-  "scripts": {
-    "test": "jest",
-    "dev": "nodemon"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.20"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+	"name": "spacetalk-api",
+	"version": "1.0.0",
+	"description": "",
+	"main": "dist/server.js",
+	"type": "module",
+	"scripts": {
+		"test": "jest",
+		"dev": "nodemon",
+		"build": "tsc -p tsconfig.build.json",
+		"start": "node ."
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/jest": "^29.2.4",
+		"@types/node": "^18.11.17",
+		"jest": "^29.3.1",
+		"nodemon": "^2.0.20",
+		"ts-jest": "^29.0.3",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.4"
+	},
+	"dependencies": {
+		"express": "^4.18.2"
+	}
 }
