--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"test": "jest",
-		"dev": "nodemon",
+		"dev": "tsc-watch -p tsconfig.build.json --onSuccess 'node .'",
 		"build": "tsc -p tsconfig.build.json",
 		"start": "node ."
 	},
@@ -14,15 +14,16 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/express": "^4.17.15",
 		"@types/jest": "^29.2.4",
 		"@types/node": "^18.11.17",
 		"jest": "^29.3.1",
-		"nodemon": "^2.0.20",
 		"ts-jest": "^29.0.3",
-		"ts-node": "^10.9.1",
+		"tsc-watch": "^6.0.0",
 		"typescript": "^4.9.4"
 	},
 	"dependencies": {
+		"dotenv": "^16.0.3",
 		"express": "^4.18.2"
 	}
 }
