--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
 		"test": "jest",
 		"dev": "tsc-watch -p tsconfig.build.json --onSuccess 'node .'",
 		"build": "tsc -p tsconfig.build.json",
-		"start": "node ."
+		"start": "node .",
+		"prisma:migrate": "prisma migrate dev --name"
 	},
 	"keywords": [],
 	"author": "",
@@ -18,11 +19,13 @@
 		"@types/jest": "^29.2.4",
 		"@types/node": "^18.11.17",
 		"jest": "^29.3.1",
+		"prisma": "^4.8.0",
 		"ts-jest": "^29.0.3",
 		"tsc-watch": "^6.0.0",
 		"typescript": "^4.9.4"
 	},
 	"dependencies": {
+		"@prisma/client": "4.8.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2"
 	}
