--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.15",
 		"@types/jest": "^29.2.4",
 		"@types/node": "^18.11.17",
@@ -26,6 +27,8 @@
 	},
 	"dependencies": {
 		"@prisma/client": "4.8.0",
+		"ajv": "^8.11.2",
+		"bcrypt": "^5.1.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2"
 	}
